Fixed some layout problems

--- a/css/style.css
+++ b/css/style.css
@@ -10,16 +10,20 @@ body
 header
 {
     width: 100%;
-    height: 70px;
-    line-height: 70px;
+    height: 100px;
+    line-height: 100px;
     border-bottom: 1px solid black;
     background: gray;
 }
 header nav ul
 {
     display: flex;
-    height: 70px;
+    height: 100px;
     margin-left: 30px;
+}
+header nav ul :nth-child(1)
+{
+    margin-top: 7px;
 }
 header nav ul :hover:not(:nth-child(1))
 {
@@ -48,19 +52,22 @@ main section:first-child
 /* main section1 END */
 
 /* main div START */
-main div
+main div:first-of-type :first-child
 {
     display: flex;
+    
 }
-main div img
+main div:first-of-type :first-child div
 {
-    width: 33%;
+    position: relative;
+    width: 100%;
 }
+
 main div :nth-child(2)
 {
-    margin-left: 30px;
-    margin-right: 30px;
-}
+    margin-left: 30px; 
+    margin-right: 30px; 
+} 
 /* main div END */
 
 /* main section2 START */
@@ -85,7 +92,7 @@ main section:last-child
 
 main section article
 {
-    height: 70%;
+    height: 300px;
     overflow: scroll;
 }
 main section button
